# tsbrowse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.md  README.md  app.py  config.py  main.py  model.py  plot_helpers.py  pyproject.toml  qc-template.ipynb  qc-template.md  qc_plots.py  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: docs.yml  lint.yml  post.yml  release.yml  tests.yml  zarr-v2-compat.yml
docs/: Makefile  _config.yml  _toc.yml  contributing.md  edges.md  example.tsbrowse  index.md  install.md  intro.md  mutations.md  nodes.md  overview.md  tables.md  trees.md  tsbrowse_image_extension.py
example/: example.trees.tsz
pages/: __init__.py  edge_explorer.py  edges.py  mutations.py  nodes.py  overview.py  popgen.py  trees.py
tests/: conftest.py  test_cli.py  test_data_model.py  test_pages.py  test_preprocess.py  test_raster.py  test_ui.py
tsbrowse/: __init__.py  __main__.py  _zarr_compat.py  app.py  cache.py  config.py  jit.py  model.py  plot_helpers.py  preprocess.py  raster.py
tsbrowse/pages/: __init__.py  edge_explorer.py  edges.py  frequency_spectra.py  mutations.py  nodes.py  overview.py  popgen.py  tables.py  trees.py
tsqc/: __main__.py  cache.py  config.py  model.py  plot_helpers.py  raster.py
tsqc/pages/: __init__.py  edge_explorer.py  edges.py  frequency_spectra.py  mutations.py  nodes.py  popgen.py  trees.py
unified_genealogies/: utils.py
