[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "tsbrowse"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Webapp to view and visualise the information structure in tskit ARGs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click",
    "daiquiri",
    "panel>=1.5.2,<=1.6.1", #Hard pin as mutations page fails with 1.6.2
    "hvplot",
    "datashader>=0.16.3",
    "matplotlib",
    "tskit",
    "tszip",
    "numcodecs>=0.6,<0.15.1", #Pinned due to https://github.com/zarr-developers/numcodecs/issues/733
    "zarr<3",
]
dynamic = ["version"]
keywords = ["tree sequence", "ancestral recombination graph", "tskit", "quality control"]

[project.optional-dependencies]
test = [
    "build==1.3.0",
    "coverage==7.10.6",
    "coveralls==4.0.1",
    "msprime==1.3.4",
    "pytest==8.4.2",
    "playwright==1.48.0",
    "pytest-playwright==0.7.1",
    "selenium==4.35.0",
    
]
docs = [
    "jupyter-book==1.0.4.post1",
    "matplotlib==3.10.6",
    "msprime==1.3.4",
    "sphinx_issues==5.0.1",
    "playwright==1.48.0",
]
dev = [
    "build",
    "click",
    "coverage",
    "coveralls", 
    "daiquiri",
    "datashader>=0.16.3",
    "hvplot",
    "jupyter-book==1.0.4.post1",
    "matplotlib",
    "msprime",
    "panel>=1.5.2,<=1.6.1",
    "pre-commit",
    "pytest",
    "playwright==1.48.0",
    "pytest-playwright",
    "selenium",
    "sphinx_issues",
    "tskit",
    "tszip",
]

[project.urls]
"Bug Tracker" = "https://github.com/tskit-dev/tsbrowse/issues"
"Source Code" = "https://github.com/tskit-dev/tsbrowse"
Homepage = "https://tskit.dev/tsbrowse/"

[tool.setuptools]
packages = ["tsbrowse", "tsbrowse.pages"]

[tool.setuptools_scm]
write_to = "tsbrowse/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
