[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "tsbrowse"
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "Webapp to view and visualise the information structure in tskit ARGs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click",
    "daiquiri",
    "panel>=1.5.2,<=1.6.1", #Hard pin as mutations page fails with 1.6.2
    "hvplot",
    "datashader>=0.16.3",
    "matplotlib",
    "tskit",
    "tszip",
    "numcodecs>=0.6,<0.15.1",
    "zarr<3",
]
dynamic = ["version"]
keywords = ["tree sequence", "ancestral recombination graph", "tskit", "quality control"]

[project.urls]
"Bug Tracker" = "https://github.com/tskit-dev/tsbrowse/issues"
"Source Code" = "https://github.com/tskit-dev/tsbrowse"
Homepage = "https://tskit.dev/tsbrowse/"

[dependency-groups]
test = [
    "msprime",
    "pytest",
    "playwright",
    "pytest-playwright",
    "pytest-cov",
    "selenium",
]

docs = [
    "jupyter-book<2",
    "matplotlib",
    "msprime",
    "sphinx_issues",
    "playwright",
]

lint = [
    "ruff==0.15.1",
    "prek==0.3.3",
]

packaging = [
    "twine",
    "validate-pyproject[all]",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "packaging"},
]

[tool.setuptools]
packages = ["tsbrowse", "tsbrowse.pages"]

[tool.setuptools_scm]
write_to = "tsbrowse/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 89

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "N806", "N802", "N803", # Various nags about uppercase vars
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["tsbrowse"]
known-third-party = [
  "msprime",
  "tskit",
  "numpy",
  "pytest",
]

